# dbt-local-workflow

./: .gitignore  .user.yml  README.md  dbt_project.yml  profiles.yml  pyproject.toml
.github/workflows/: dbt-pr-ci.yml  deploy-docs.yml
argo-workflows/: Dockerfile  Makefile  README.md
argo-workflows/scripts/: setup-local-k8s.sh
argo-workflows/templates/: dbt-cron-workflow.yaml  dbt-dag-workflow.yaml  dbt-workflow.yaml
macros/: drop_schema.sql  generate_schema_name.sql  get_raw_schema.sql
models/marts/: _marts.yml  mrt_customer_orders.sql  mrt_daily_orders.sql
models/staging/: _sources.yml  _staging.yml  stg_customers.sql  stg_orders.sql
scripts/: setup_local_env.py
seeds/: raw_customers.csv  raw_orders.csv
